# stativ

./: Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  mkdocs.yml  pyproject.toml  sbom.json  sbom.json.sha256  setup.cfg  stativ.ABOUT
docs/: SUMMARY.md  book.toml  changes.md  index.md  install.md  test-coverage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
stativ/: __init__.py  __main__.py  cli.py  delta_store.py  stativ.py
test/: test_cli.py  test_delta_store.py
test/fixtures/backup_store/daily/repositories/foo-bar-baz-local.brm-metadata/: brm-folder.xml
test/fixtures/backup_store/daily/repositories/foo-bar-baz-local/ABC/2021/2021.brm-metadata/: brm-folder.xml
test/fixtures/backup_store/daily/repositories/foo-bar-baz-local/ABC/2021/Public/: DEF.txt.brm-metadata
test/fixtures/backup_store/daily/repositories/foo-bar-baz-local/ABC/ABC.brm-metadata/: brm-folder.xml
tests/: test_cli.py  test_delta_store.py
tests/fixtures/backup_store/daily/repositories/foo-bar-baz-local/ABC/2021/Public/Public.brm-metadata/: brm-folder.xml
tests/fixtures/delta_store/store/: proxy.json
